5차 치명적 오류 수정
Signed-off-by: LacyCat <lacycat1807@gmail.com>