@@ -7,14 +7,15 @@ import org.bukkit.command.TabCompleter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ConfigTabCompleter implements TabCompleter {
     private static final String[] arg1 = {"reload", InfiniDeathKey.root};
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String @NotNull [] args) {
-        if (args.length == 1) return List.of(arg1);
-        else if (args.length == 2 && args[0].equals(InfiniDeathKey.root)) return List.of(InfiniDeathKey.infd);
+        if (args.length == 1) return Arrays.asList(arg1);
+        else if (args.length == 2 && args[0].equals(InfiniDeathKey.root)) return Arrays.asList(InfiniDeathKey.infd);
         else {
             return List.of();
         }
